k8s/ingress/kc-ingress.yml
# Simple Fanout Ingress for Keycloak
# DNS > LB > Ingress > Service > Pods > Container
# Ingress configuration for REST API
apiVersion: networking.k8s.io/v1 # K8S API version
kind: Ingress
metadata:
  name: kc-ingress
  namespace: kube-auth # The name of the namespace
  annotation:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # Sets up the appropriate nginx configuration to route http/2 traffic to a service
    # Enable if you prefer to forward encrypted traffic to pods and don't want to terminate tls at Ingress level
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/enable-access-log: "true" # Enable/disable nginx access log
    nginx.ingress.kubernetes.io/proxy-body-size: 8m # Sets the maximum size of the body in a request, if the body exceeds the maximum size set, nginx will return a 413 error to the client
    # Rate-limiting annotations are useful for defining limits on connections and transmission rates and they can be very helpful for mitigating DDoS attacks
    nginx.ingress.kubernetes.io/limit-rps: "5" # Defines the number of requests that may be accepted from a given IP address each second
    nginx.ingress.kubernetes.io/limit-rpm: "300" # Defines the number of requests that may be accepted from a given IP address each minute
    nginx.ingress.kubernetes.io/limit-connections: "10" # Defines the number of concurrent connections allowed from a given IP address
    # WWW Redirects
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true" # Redirects from www.domain.com to domain.com or vice versa
    # SSL Redirects
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true" # forces every incoming HTTP request to HTTPS
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx # Ingress Controller
  rules:
    - host: kc.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
